# Formatstring

./: CMakeLists.txt  README.md  Tests.cmake
include/formatstring/: Formatstring.h  QuickFormat.h  ToString.h  Wrapper.h
include/formatstring/detail/: ToStringHandler.h  Variable.h
include/formatstring/err/: FormatException.h
include/formatstring/stringify/: BoolToString.h  CollectionToString.h  FloatToString.h  FormatHelper.h  IntToString.h  PairToString.h  StringToString.h  TupleToString.h
include/formatstring/util/: Assert.h  Metafunctions.h  PointerUtil.h
src/formatstring/: Formatstring.cpp
src/formatstring/err/: FormatException.cpp
src/formatstring/stringify/: BoolToString.cpp  FloatToString.cpp  FormatHelper.cpp  Grisu2.cpp  IntToString.cpp  StringToString.cpp
test/: RawTest.cpp  TestFormatException.cpp  TestFormatstring.cpp  TestMain.cpp  TestQuickformat.cpp  TestToString.cpp  TestVariables.cpp
test/compile/: TestToStringAssert.cpp
test/stringify/: TestBoolToString.cpp  TestCollectionToString.cpp  TestFloatToString.cpp  TestFormatHelper.cpp  TestIntToString.cpp  TestPairToString.cpp  TestStringToString.cpp  TestTupleToString.cpp
